--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,7 +3,7 @@
 <PageTitle>Main</PageTitle>
 
 <h1>Spendings Checker</h1>
-This app allows you to check:
+This app checks:
 <br>
 <br>
 - total amount of money spent
