--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,8 +3,7 @@
 <PageTitle>Main</PageTitle>
 
 <h1>Spendings Checker</h1>
-This app allows you to check:
-<br>
+This app checks:
 <br>
 - total amount of money spent
 <br>
